Change Log
----------

  V0.99.4
  
  - Fixes:
    - All makefiles no longer create .ds.gba and .sc.nds binaries.
  
  - New Features:
    - Built with devKitARM r31/libnds 1.4.5/default ARM7 0.5.14.
    - Setting MultiLineTextBox's max rows to -1 forces it to retain all text.
    - Added getCharTop() to font classes.
    - Various minor .NET tool improvements.

  V0.99.3 (20100819)
  
  - Fixes:
    - WoopsiString::compareTo() no longer inlined (fixes SF bug 3017420).
    - Moved unused FixedWidthFontBase class into extras directory.
    - Moved putSDLPixel() and getSDLPixel() into FrameBuffer class from
      woopsifuncs files.
    - Added copy() to all bitmap classes.
    - Replaced call to woopsiDmaCopy() in Graphics::copy() with call to copy()
      method of bitmap class.
    - Graphics::drawEllipse() automatically calls drawCircle() if both radii are
      equal.
    - Graphics::drawFilledEllipse() automatically calls drawFilledCircle() if
      both radii are the same.
    - Graphics::drawCircle() and drawFilledCircle() are protected.
    - Graphics::drawLine() automatically calls drawVertLine() or drawHorizLine()
      if lines can be optimised.
    - Graphics::drawVertLine() and drawHorizLine() are protected.
    - Removed GraphicsPort::drawCircle(), drawFilledCircle(), drawHorizLine()
      and drawVertLine().
    - Fixed TinyFont (broken in last release).
    - Moved woopsiRGB() macro from woopsifuncs.h to graphics.h.
    - Moved woopsiDmaFill() and woopsiDmaCopy() into new dmafuncs files.
    - PackedFont1 clips correctly.
    - Gadget collision detection uses routines in Rect class.
    - All GraphicsPort routines use Rect class.
    - Rect::hasDimensions() returns false for negative sizes.
    - Rect::getIntersect() and getAddition() work correctly for negative sizes.
    - Removed Rect::fromDimensions().
    - Rect::fromCoordinates returns a rect rather than a pointer to a rect.
    - Tidied up SDL pad updating in woopsifuncs.c.